--- a/A2/Hotel_Booking_A2.ipynb
+++ b/A2/Hotel_Booking_A2.ipynb
@@ -819,10 +819,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98afcda2",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Curvas ROC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "95cf7432",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "data": {
