--- a/A2/Hotel_Booking_A2.ipynb
+++ b/A2/Hotel_Booking_A2.ipynb
@@ -198,7 +198,7 @@
     "    \n",
     "    return fpr, tpr, roc_auc\n",
     "\n",
-    "def find_parameters(model, model_name, X_train, y_train, X_test, y_test, params):\n",
+    "def find_parameters(model, model_name, X_train, y_train, params):\n",
     "    max_score = 0\n",
     "    for param in product(*params):\n",
     "        if model_name == 'Regressão Logística':\n",
@@ -259,7 +259,7 @@
     "%%time\n",
     "C = [0.001, 0.01, 0.1, 1, 10, 100, 1000]\n",
     "logreg = LogisticRegression(random_state = 0)\n",
-    "logreg = find_parameters(logreg, 'Regressão Logística', X_train, y_train, X_test, y_test, [C])"
+    "logreg = find_parameters(logreg, 'Regressão Logística', X_train, y_train, [C])"
    ]
   },
   {
@@ -405,8 +405,8 @@
     "max_depth = [1, 5, 10, 15, 20, 25]\n",
     "min_samples_split = [50, 100, 200, 400]\n",
     "dtc = DecisionTreeClassifier(random_state = 0)\n",
-    "dtc = find_parameters(dtc, 'Decision Tree', X_train, y_train, X_test, y_test, [max_depth, \n",
-    "                                                                               min_samples_split])"
+    "dtc = find_parameters(dtc, 'Decision Tree', X_train, y_train, [max_depth, \n",
+    "                                                               min_samples_split])"
    ]
   },
   {
@@ -554,9 +554,9 @@
     "max_depth = [1, 5, 10, 15, 20, 25]\n",
     "min_samples_split = [50, 100, 200, 400]\n",
     "rfc = RandomForestClassifier(random_state = 0)\n",
-    "rfc = find_parameters(rfc, 'Random Forest', X_train, y_train, X_test, y_test, [estimators,\n",
-    "                                                                               max_depth,\n",
-    "                                                                               min_samples_split])"
+    "rfc = find_parameters(rfc, 'Random Forest', X_train, y_train, [estimators,\n",
+    "                                                               max_depth,\n",
+    "                                                               min_samples_split])"
    ]
   },
   {
@@ -703,9 +703,9 @@
     "max_depth = [1, 5, 10] \n",
     "learning_rate = [0.1, 0.5, 1, 5, 10]\n",
     "gbc = GradientBoostingClassifier(random_state = 0)\n",
-    "gbc = find_parameters(gbc, 'Gradient Boosting', X_train, y_train, X_test, y_test, [estimators,\n",
-    "                                                                                   max_depth,\n",
-    "                                                                                   learning_rate])"
+    "gbc = find_parameters(gbc, 'Gradient Boosting', X_train, y_train, [estimators,\n",
+    "                                                                   max_depth,\n",
+    "                                                                   learning_rate])"
    ]
   },
   {
@@ -892,7 +892,7 @@
    "source": [
     "Na primeira parte um gráfico que chamou muita atenção foi o seguinte:\n",
     "\n",
-    "<img src = \"download.png\" width = \"1200\" alt>\n",
+    "<img src = \"Imagens_A1/A1_1.png\" width = \"1200\" alt>\n",
     "\n",
     "Onde pudemos ver que essas duas variáveis conseguem separar bem os grupos. Assim, poderíamos dizer que \"pessoas que reservam vagas de estacionamento ou fazem pedidos especiais não irão cancelar a reserva\".\n",
     "\n",
